--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
 /* ESTILO GERAL */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    width: 100%; /* Garante que não ultrapassam a largura da tela */
+    overflow-x: hidden; /* Garante que a rolagem lateral está desativada */
 }
 *{
     margin: 0;
@@ -9,9 +11,10 @@ html {
     box-sizing: border-box;
     font-family: "Poppins";
 }
+
 body{
     background-color: #0E2A56;
-    height: 100vh;
+    height: 100vh;   
 }
 
 .interface{
@@ -159,7 +162,7 @@ section.topo-do-site .flex{
 }
 .topo-do-site .img-topo-site img{
     border-radius: 100px;
-    height: 450px;
+    height: 400px;
     position: relative;
     animation: flutuar 2s ease-in-out infinite alternate;
 }
@@ -502,3 +505,24 @@ footer .line-footer p a{
 
     
 }
+
+/* ===== EFEITO DE CLIQUE ===== */
+.click-effect {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background: rgba(133, 228, 255, 0.6); /* mesma cor azul do seu tema */
+    border-radius: 50%;
+    pointer-events: none;
+    transform: scale(0);
+    animation: ripple 0.4s ease-out forwards;
+    z-index: 9999; /* garante que fique visível sobre tudo */
+}
+
+@keyframes ripple {
+    to {
+        transform: scale(20);
+        opacity: 0;
+    }
+}
+
